# personal_rag

./: .gitignore  app.py  main.py  pyproject.toml  ruff.toml
core/: document_manager.py  image_manager.py  search_engine.py
data/: image_metadata.json
data/index/: chroma.sqlite3
pages/: document.py  image.py  search.py
utils/: helpers.py
